tool/src/kotlin/snapshots/diplomat_tool__kotlin__test__opaque_gen.snap
---
source: tool/src/kotlin/mod.rs
expression: result
---
package dev.diplomattest.somelib;
import com.sun.jna.Callback
import com.sun.jna.Library
import com.sun.jna.Native
import com.sun.jna.Pointer
import com.sun.jna.Structure

internal interface BorrowWrapperLib: Library {
    fun BorrowWrapper_destroy(handle: Pointer)
}

class BorrowWrapper internal constructor (
    internal val handle: Pointer,
    // These ensure that anything that is borrowed is kept alive and not cleaned
    // up by the garbage collector.
    internal val selfEdges: List<Any>,
    internal val aEdges: List<Any?>,
    internal val bEdges: List<Any?>,
    internal var owned: Boolean,
)  {

    init {
        if (this.owned) {
            this.registerCleaner()
        }
    }

    private class BorrowWrapperCleaner(val handle: Pointer, val lib: BorrowWrapperLib) : Runnable {
        override fun run() {
            lib.BorrowWrapper_destroy(handle)
        }
    }
    private fun registerCleaner() {
        CLEANER.register(this, BorrowWrapper.BorrowWrapperCleaner(handle, BorrowWrapper.lib));
    }

    companion object {
        internal val libClass: Class<BorrowWrapperLib> = BorrowWrapperLib::class.java
        internal val lib: BorrowWrapperLib = Native.load("somelib", libClass)
    }

}
