tool/src/kotlin/snapshots/diplomat_tool__kotlin__test__opaque_gen_with_finalizers.snap
---
source: tool/src/kotlin/mod.rs
expression: result
---
package dev.diplomattest.somelib;
import com.sun.jna.Callback
import com.sun.jna.Library
import com.sun.jna.Native
import com.sun.jna.Pointer
import com.sun.jna.Structure

internal interface MyOpaqueStructLib: Library {
    fun MyOpaqueStruct_destroy(handle: Pointer)
    fun MyOpaqueStruct_get_byte(): FFIUint8
    fun MyOpaqueStruct_get_string_wrapper(in1: Int): Int
}

class MyOpaqueStruct internal constructor (
    internal val handle: Pointer,
    // These ensure that anything that is borrowed is kept alive and not cleaned
    // up by the garbage collector.
    internal val selfEdges: List<Any>,
    internal val bEdges: List<Any?>,
    internal var owned: Boolean,
)  {

    init {
        if (this.owned) {
            this.registerFinalizer()
        }
    }
    private fun registerFinalizer() {
        this.owned = true
    }

    @Override
    @SuppressWarnings("Finalize")
    fun finalize() {
        if (owned)
            lib.MyOpaqueStruct_destroy(handle)
    }

    companion object {
        internal val libClass: Class<MyOpaqueStructLib> = MyOpaqueStructLib::class.java
        internal val lib: MyOpaqueStructLib = Native.load("somelib", libClass)
        @JvmStatic
        
        fun getByte(): UByte {
            
            val returnVal = lib.MyOpaqueStruct_get_byte();
            return (returnVal.toUByte())
        }
        @JvmStatic
        
        fun getStringWrapper(in1: Int): Int {
            
            val returnVal = lib.MyOpaqueStruct_get_string_wrapper(in1);
            return (returnVal)
        }
    }

}
