tool/src/kotlin/snapshots/diplomat_tool__kotlin__test__opaque_gen_with_mocking_interface.snap
---
source: tool/src/kotlin/mod.rs
expression: result
---
package dev.gigapixel.somelib;
import com.sun.jna.Callback
import com.sun.jna.Library
import com.sun.jna.Native
import com.sun.jna.Pointer
import com.sun.jna.Structure


internal interface MyOpaqueStructLib: Library {
    fun MyOpaqueStruct_destroy(handle: Pointer)
    fun MyOpaqueStruct_get_byte(): FFIUint8
    fun MyOpaqueStruct_get_string_wrapper(in1: Int): Int
}
internal interface MyOpaqueStructInterface {
}

class MyOpaqueStruct internal constructor (
    internal val handle: Pointer,
    // These ensure that anything that is borrowed is kept alive and not cleaned
    // up by the garbage collector.
    internal val selfEdges: List<Any>,
    internal val bEdges: List<Any?>,
    internal var finalizer_registered: Boolean = false,
): MyOpaqueStructInterface  {
    fun registerFinalizer() {
        this.finalizer_registered = true
    }

    @Override
    @SuppressWarnings("Finalize")
    fun finalize() {
        if (finalizer_registered)
            lib.MyOpaqueStruct_destroy(handle)
    }

    companion object {
        internal val libClass: Class<MyOpaqueStructLib> = MyOpaqueStructLib::class.java
        internal val lib: MyOpaqueStructLib = Native.load("somelib", libClass)
        
        fun getByte(): UByte {
            
            val returnVal = lib.MyOpaqueStruct_get_byte();
            return (returnVal.toUByte())
        }
        
        fun getStringWrapper(in1: Int): Int {
            
            val returnVal = lib.MyOpaqueStruct_get_string_wrapper(in1);
            return (returnVal)
        }
    }

}
